[build-system]
requires = ["setuptools >=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfclip"
authors = [
    {name = "Shkarupa Alex", email = "shkarupa.alex@gmail.com"},
]
description = "Keras v3 (TensorFlow v2) port of OpenCLIP package"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache License 2.0"}
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
dependencies = [
    "absl-py",
    "numpy",
    "rich",
    "namex",
    "h5py",
    "optree",
    "ml-dtypes",
    "packaging",
]
# Run also: pip install -r requirements.txt

[project.urls]
Home = "https://github.com/shkarupa-alex/tfclip"
Repository = "https://github.com/shkarupa-alex/tfclip"

[tool.setuptools.packages.find]
include = ["tfclip", "tfclip.*"]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
]
ignore = [
    "E722",  # do not use bare 'except'
    "E741",  # ambiguous variable name
    "E731",  # do not assign a `lambda` expression, use a `def`
]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["E501", "F401"]  # lines too long; imported but unused

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["tfclip"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
    "ignore::RuntimeWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
    # Ignore a spurious warning on tf-nightly related to save model changes.
    "ignore:Custom mask layers require a config",
]
addopts = "-vv"

# Do not run tests in the `build` folders
norecursedirs = ["build"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abstract",
    "raise NotImplementedError",
]
omit = [
    "*/*_test.py",
    "*/test_*.py",
]

[tool.coverage.run]
branch = true
omit = [
    "*/*_test.py",
    "*/test_*.py",
]
